moved from css to sass

--- a/src/App.css
+++ b/src/App.css
@@ -9,45 +9,37 @@
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   margin: 20px auto;
   justify-content: space-around;
   background: #ECECEC; }
-
-.markdown, .preview {
-  width: 600px;
-  min-height: 400px;
-  margin: 20px 0;
-  background: white;
-  border-radius: 5px;
-  padding: 30px; }
-
-.text {
-  background: red;
-  width: 100px;
-  text-align: center;
-  border-radius: 5px; }
-
-.previewText {
-  background: green;
-  width: 100px;
-  text-align: center;
-  border-radius: 5px; }
-
-.preview div {
-  width: 100%;
-  margin-top: 10px; }
-
-textarea {
-  width: 99%;
-  height: 90%;
-  border: none;
-  outline: none;
-  margin-top: 10px; }
+  .app .markdown, .app .preview {
+    width: 40%;
+    min-height: 800px;
+    background: #ffffff;
+    margin: 30px 0; }
+  .app .text {
+    font-size: 20px;
+    border-radius: 5px;
+    padding: 5px;
+    background: #EC644B;
+    text-align: center;
+    margin-bottom: 20px; }
+  .app .previewText {
+    font-size: 20px;
+    border-radius: 5px;
+    padding: 5px;
+    background: #87D37C;
+    text-align: center;
+    margin-bottom: 20px; }
+  .app textarea {
+    width: 99%;
+    height: 90%;
+    border: none;
+    outline: none; }
 
 .title {
-  width: 100%;
+  font-size: 30px;
   text-align: center;
-  margin-top: 10px;
-  font-size: 40px; }
+  padding: 10px; }
