--- a/src/App.scss
+++ b/src/App.scss
@@ -1,63 +1,70 @@
-*{
+$appbBgColor : #ECECEC;
+$textAreaBgColor : #ffffff;
+
+@mixin mainApp {
+  width: 100%;
+  height:100%;
+  display: flex;
+  margin : 20px auto;
+  justify-content: space-around;
+  background: $appbBgColor ;
+}
+
+@mixin textlabel($color) {
+      font-size: 20px;
+      border-radius: 5px;
+      padding: 5px;
+      background: $color;
+      text-align: center;
+      margin-bottom : 20px;
+}
+
+@mixin textareas{
+  width : 40%;
+  min-height: 800px;
+  background: $textAreaBgColor;
+  margin: 30px 0 ;
+}
+
+* {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
 }
 
-#root{
+#root {
   width: 100%;
   height: 100%;
 }
 
-.app{
-  width: 100%;
-  height:100vh;
-  display: flex;
-  margin : 20px auto;
-  justify-content: space-around;
-  background: #ECECEC;
+.app {
+
+    @include mainApp;
+
+    .markdown, .preview{
+      @include textareas;
+    }
+
+    .text{
+      @include textlabel(#EC644B);
+    }
+
+    .previewText{
+      @include textlabel(#87D37C);
+    }
+
+    textarea {
+      width: 99%;
+      height: 90%;
+      border: none;
+      outline: none;
+    }
 }
 
-.markdown, .preview{
-  width: 600px;
-  min-height: 400px;
-  margin: 20px 0 ;
-  background: white;
-  border-radius: 5px;
-  padding: 30px;
-}
-
-.text {
-  background: red;
-  width: 100px;
+.title {
+  font-size: 30px;
   text-align: center;
-  border-radius: 5px;
+  padding : 10px;
 }
 
-.previewText {
-  background: green;
-  width: 100px;
-  text-align: center;
-  border-radius: 5px;
-}
-
-.preview div {
-  width: 100%;
-  margin-top: 10px;
-}
-
-textarea{
-  width: 99%;
-  height: 90%;
-  border: none;
-  outline:none;
-  margin-top: 10px;
-}
-
-.title{
-  width: 100%;
-  text-align: center;
-  margin-top: 10px;
-  font-size: 40px;
-}
 
