--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 $appbBgColor : #ECECEC;
 $textAreaBgColor : #ffffff;
 
+//**********Mixins********************
+
 @mixin mainApp {
   width: 100%;
   height:100%;
@@ -26,6 +28,9 @@ $textAreaBgColor : #ffffff;
   margin: 30px 0 ;
 }
 
+//******Mixin End***************
+
+
 * {
   margin: 0;
   padding: 0;
@@ -35,6 +40,12 @@ $textAreaBgColor : #ffffff;
 #root {
   width: 100%;
   height: 100%;
+}
+
+.title {
+  font-size: 30px;
+  text-align: center;
+  padding : 10px;
 }
 
 .app {
@@ -61,10 +72,6 @@ $textAreaBgColor : #ffffff;
     }
 }
 
-.title {
-  font-size: 30px;
-  text-align: center;
-  padding : 10px;
-}
+
 
 
