--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,8 @@
     width: 40%;
     min-height: 800px;
     background: #ffffff;
-    margin: 30px 0; }
+    margin: 30px 0;
+    padding: 10px; }
   .app .text {
     font-size: 20px;
     border-radius: 5px;
