--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,7 @@ $textAreaBgColor : #ffffff;
       background: $color;
       text-align: center;
       margin-bottom : 20px;
+      
 }
 
 @mixin textareas{
@@ -26,6 +27,7 @@ $textAreaBgColor : #ffffff;
   min-height: 800px;
   background: $textAreaBgColor;
   margin: 30px 0 ;
+  padding: 10px;
 }
 
 //******Mixin End***************
